# image-node-editor

./: CMakeLists.txt  README.md  ui.drawio
.github/workflows/: artifacts.yml
application/: CMakeLists.txt
application/addons/: ImGuiNotify.hpp
application/include/: application.h
application/source/: application.cpp  image_to_texture.cpp  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  renderer_dx11.cpp  tex_inspect_directx11.cpp
blueprints-example/: CMakeLists.txt  blueprints-example.cpp
blueprints-example/addons/: ImFileDialog.cpp  ImFileDialog.h  imspinner.h
blueprints-example/nodes/: base_nodes.cpp  base_nodes.hpp  factory_group.hpp  graph_algorithm.cpp  graph_ui.hpp  node_port_types.hpp  node_serialize.hpp  node_ui_colors.hpp
blueprints-example/nodes/child_nodes/: child_nodes.hpp
blueprints-example/nodes/child_nodes/base/: base_convert.hpp  base_operation.hpp  base_string.hpp  base_type.hpp
blueprints-example/nodes/child_nodes/blueprint/: blueprint.hpp
blueprints-example/nodes/child_nodes/flow/: flow_source.hpp
blueprints-example/nodes/child_nodes/image/: image_color_convert.hpp  image_draw.cpp  image_draw.hpp  image_feature.hpp  image_filter.hpp  image_math.hpp  image_operator_edge.hpp  image_operator_match.hpp  image_operator_morphology.hpp  image_operator_threshold.hpp  image_source.cpp  image_source.hpp  image_type.hpp
blueprints-example/nodes/child_nodes/image/utils/: capture.include.h  capture.window_graphic.hpp  utils.window_graphics.h
blueprints-example/nodes/child_nodes/image_source/: file_source.hpp  image_source_node.hpp
blueprints-example/nodes/child_nodes/maa/: maa_task.hpp
blueprints-example/nodes/child_nodes/win32/: win32_softinput.cpp  win32_softinput.hpp  win32_window.cpp  win32_window.hpp
blueprints-example/notifiers/: Notifier.cpp
blueprints-example/textures/: image_to_texture.cpp  image_to_texture.hpp
blueprints-example/utilities/: builders.cpp  builders.h  console.stream.h  frame_graph.hpp  global.define.h  minidump.h  utils.string.h
cmake/: find_deps.cmake  find_opencv.cmake
doc/: 关于节点.md
flow-image-app/: CMakeLists.txt  blueprints-example.cpp
flow-image-app/nodes/: base_node.cpp  base_node.hpp  base_nodes.cpp  base_nodes.hpp
flow-image-app/nodes/child_nodes/: child_nodes.hpp
flow-image-app/nodes/child_nodes/image_source/: image_source_node.hpp
flow-image-app/notifiers/: Notifier.hpp
imgui-node-editor/: .gitignore  imgui_node_editor.cpp  imgui_node_editor_internal.h
imgui-node-editor/misc/cmake-modules/: Findimgui_flame_graph.cmake  Findimgui_tex_inspect.cmake
